improved jvm-config