@@ -19,14 +19,18 @@ set YAIOCONFIGPATH=%BASEPATH%\..\config\
 set YAIOSCRIPTPATH=%BASEPATH%\..\sbin\
 set YAIORESPATH=%BASEPATH%\..\resources\
 set YAIOVARPATH=%BASEPATH%\..\var\
-rem TODO
 set YAIOAPP=%BASEPATH%..\dist\yaio-app-server-full.jar
 set APPPROPAGATOR=%BASEPATH%..\sbin\apppropagator.jar
 set CP="%YAIOAPP%;%APPPROPAGATOR%;"
 set CFGFILE=%BASEPATH%..\config\yaio-application.properties
 set CFG=--config %CFGFILE% 
 set FLYWAYCFG=%CFG%
-set JAVAOPTIONS=-Xmx768m -Xms128m -Dspring.config.location=file:%CFGFILE% -Dlog4j.configuration=file:%BASEPATH%..\config\log4j.properties
+
+set JVMMEMOPTIONS=-Xmx512m -Xms128m
+rem java 1.8
+rem set JVMMEMOPTIONS=-XX:MaxMetaspaceSize=512m -Xms128m
+set JVMOPTIONS=%JVMMEMOPTIONS% -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 -XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark
+set JAVAOPTIONS=%JVMOPTIONS% -Dspring.config.location=file:%CFGFILE% -Dlog4j.configuration=file:%BASEPATH%..\config\log4j.properties
 
 rem change CodePage
 CHCP 1252
